mcp-git-server/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openhands-mcp-git-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openhands-mcp-git-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: openhands-mcp-git-server
    spec:
      containers:
        - name: mcp-git-server
          command:
            - /bin/bash
          args:
            - '-c'
            - python /mcp-server/mcp_server.py
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: 'quay.io/rlundber/openhands-mcp-git-server:0.1'
          resources: 
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
